[gd_scene load_steps=27 format=2]

[ext_resource path="res://pck/assets/Home-Withdraw/icon-withdraw-question.png" type="Texture" id=1]
[ext_resource path="res://pck/assets/HomeScence/icon-bottom-bar.png" type="Texture" id=2]
[ext_resource path="res://pck/assets/menu/icon-main-back.png" type="Texture" id=3]
[ext_resource path="res://pck/assets/Home-Withdraw/Home-Withdraw/EER1.png" type="Texture" id=4]
[ext_resource path="res://pck/assets/Home-Withdraw/icon-withdraw-out.png" type="Texture" id=5]
[ext_resource path="res://pck/scenes/Withdraw.gd" type="Script" id=6]
[ext_resource path="res://pck/assets/Home-Member-Info/icon-withdraw-rightbg.png" type="Texture" id=7]
[ext_resource path="res://pck/assets/Home-Member-Bank/icon-member-bank-money.png" type="Texture" id=8]
[ext_resource path="res://pck/assets/Home-Withdraw/Home-Withdraw/icon-withdraw-dropdown.png" type="Texture" id=9]
[ext_resource path="res://pck/assets/Home-Transfer-Topup/icon-transfer-cashin-confirm.png" type="Texture" id=10]
[ext_resource path="res://pck/scripts/button.gd" type="Script" id=11]
[ext_resource path="res://pck/assets/common/zawgyi-one.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://pck/assets/Home-Withdraw/icon-withdraw-history.png" type="Texture" id=13]
[ext_resource path="res://pck/assets/HomeScence/image-main-background.png" type="Texture" id=14]
[ext_resource path="res://start/zawgyi-one.ttf" type="DynamicFontData" id=15]

[sub_resource type="Animation" id=14]
resource_name = "In"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "Out"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 14 )
region_rect = Rect2( 0, 0, 2304, 1080 )
modulate_color = Color( 1, 1, 1, 0.737255 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.117647, 0.117647, 0.2, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.988235, 0.988235, 1, 0.52549 )
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 10

[sub_resource type="DynamicFont" id=12]
size = 30
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=13]
size = 50
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.117647, 0.117647, 0.2, 1 )

[sub_resource type="Theme" id=19]
/styles/styleboxflat = SubResource( 18 )

[sub_resource type="DynamicFont" id=20]
size = 25
outline_color = Color( 1, 1, 1, 0.117647 )
font_data = ExtResource( 15 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.117647, 0.117647, 0.2, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.117647, 0.117647, 0.2, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Withdraw" type="Control"]
margin_left = -7.0
margin_top = 3.0
margin_right = 2020.0
margin_bottom = 909.0
script = ExtResource( 6 )

[node name="withdrawAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../Withdraw_panel")
anims/In = SubResource( 14 )
anims/Out = SubResource( 15 )
anims/RESET = SubResource( 16 )

[node name="Withdraw_panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 8.0
margin_top = -1.0
margin_right = 2052.0
margin_bottom = 913.0
custom_styles/panel = SubResource( 9 )

[node name="left" type="Sprite" parent="Withdraw_panel"]
position = Vector2( 137.825, 518.861 )
scale = Vector2( 0.272, 0.307 )
texture = ExtResource( 4 )

[node name="Icon-bottom-bar" type="Sprite" parent="Withdraw_panel"]
position = Vector2( 1014, 5 )
scale = Vector2( 0.685556, 1 )
texture = ExtResource( 2 )

[node name="rightbg" type="Sprite" parent="Withdraw_panel"]
position = Vector2( 1125, 493 )
scale = Vector2( 1.382, 1.382 )
texture = ExtResource( 7 )

[node name="used_amount" type="Panel" parent="Withdraw_panel"]
margin_left = 663.0
margin_top = 271.0
margin_right = 1051.0
margin_bottom = 348.0
rect_pivot_offset = Vector2( -958, 145 )
custom_styles/panel = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Withdraw_panel/used_amount"]
position = Vector2( 32, 39 )
scale = Vector2( 0.4, 0.381372 )
texture = ExtResource( 8 )

[node name="withdrawable_amount" type="Panel" parent="Withdraw_panel"]
margin_left = 1273.0
margin_top = 270.0
margin_right = 1661.0
margin_bottom = 346.0
custom_styles/panel = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="Withdraw_panel/withdrawable_amount"]
position = Vector2( 30, 40 )
scale = Vector2( 0.4, 0.381372 )
texture = ExtResource( 8 )

[node name="withdraw" type="TextureButton" parent="Withdraw_panel"]
margin_left = -23.0
margin_top = 168.0
margin_right = 294.0
margin_bottom = 289.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Withdraw_panel/withdraw"]
position = Vector2( 163.5, 54 )
scale = Vector2( 0.34, 0.25 )
texture = ExtResource( 5 )

[node name="withdraw2" type="TextureButton" parent="Withdraw_panel"]
margin_left = -14.0
margin_top = 727.0
margin_right = 255.0
margin_bottom = 835.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Withdraw_panel/withdraw2"]
position = Vector2( 152, 54 )
scale = Vector2( 0.323, 0.32 )
texture = ExtResource( 13 )

[node name="Exit" type="TextureButton" parent="Withdraw_panel"]
anchor_top = -0.022
margin_left = 3.0
margin_top = 15.712
margin_right = 110.0
margin_bottom = 100.328

[node name="Sprite" type="Sprite" parent="Withdraw_panel/Exit"]
position = Vector2( 70, 52.396 )
scale = Vector2( 0.1465, 0.216049 )
texture = ExtResource( 3 )

[node name="confirm" type="TextureButton" parent="Withdraw_panel"]
margin_left = 993.0
margin_top = 752.0
margin_right = 1294.0
margin_bottom = 843.0
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Withdraw_panel/confirm"]
position = Vector2( 148, 42 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 10 )

[node name="game_account2" type="Label" parent="Withdraw_panel"]
margin_left = 692.0
margin_top = 185.0
margin_right = 925.0
margin_bottom = 246.0
custom_fonts/font = SubResource( 12 )
text = "လက္ရွိအသုံးျပဳဆဲပါ"
align = 1
valign = 1

[node name="game_account4" type="Label" parent="Withdraw_panel"]
margin_left = 439.0
margin_top = 526.0
margin_right = 713.0
margin_bottom = 587.0
custom_fonts/font = SubResource( 12 )
text = "ဘဏ္အေကာင့္နာမည္:"
align = 1
valign = 1

[node name="game_account6" type="Label" parent="Withdraw_panel"]
margin_left = 436.0
margin_top = 641.0
margin_right = 699.0
margin_bottom = 702.0
custom_fonts/font = SubResource( 12 )
text = "ေငြထုတ္မည့္ပမာဏ:"
align = 1
valign = 1

[node name="game_account3" type="Label" parent="Withdraw_panel"]
margin_left = 1300.0
margin_top = 185.0
margin_right = 1562.0
margin_bottom = 246.0
custom_fonts/font = SubResource( 12 )
text = "ထုတ္ႏိုင္သည့္ပမာဏ"
align = 1
valign = 1

[node name="game_account5" type="Label" parent="Withdraw_panel"]
margin_left = 1151.0
margin_top = 526.0
margin_right = 1413.0
margin_bottom = 587.0
custom_fonts/font = SubResource( 12 )
text = "ဘဏ္နံပါတ္:"
align = 1
valign = 1

[node name="Balance1" type="Label" parent="Withdraw_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 790.0
margin_top = 269.0
margin_right = -1063.0
margin_bottom = -555.0
custom_colors/font_color = Color( 0.929412, 0.745098, 0.301961, 1 )
custom_colors/font_outline_modulate = Color( 0.921569, 0.643137, 0.286275, 1 )
custom_fonts/font = SubResource( 13 )
text = "0"
align = 1
valign = 1

[node name="Balance2" type="Label" parent="Withdraw_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1383.0
margin_top = 270.0
margin_right = -470.0
margin_bottom = -554.0
custom_colors/font_color = Color( 0.929412, 0.745098, 0.301961, 1 )
custom_colors/font_outline_modulate = Color( 0.921569, 0.643137, 0.286275, 1 )
custom_fonts/font = SubResource( 13 )
text = "0"
align = 1
valign = 1

[node name="game_account7" type="LineEdit" parent="Withdraw_panel"]
margin_left = 1408.0
margin_top = 529.0
margin_right = 1691.0
margin_bottom = 599.0
theme = SubResource( 19 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0.184314, 0.180392, 0.345098, 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.207843 )
custom_fonts/font = SubResource( 20 )
custom_styles/normal = SubResource( 21 )
caret_blink = true
caret_blink_speed = 0.5

[node name="game_account8" type="LineEdit" parent="Withdraw_panel"]
margin_left = 760.0
margin_top = 513.0
margin_right = 1106.0
margin_bottom = 583.0
theme = SubResource( 19 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0.184314, 0.180392, 0.345098, 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.207843 )
custom_fonts/font = SubResource( 20 )
custom_styles/normal = SubResource( 21 )
caret_blink = true
caret_blink_speed = 0.5

[node name="TextureButton" type="TextureButton" parent="Withdraw_panel/game_account8"]
margin_left = 267.0
margin_top = -1.0
margin_right = 341.0
margin_bottom = 65.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Withdraw_panel/game_account8/TextureButton"]
position = Vector2( 44, 36 )
scale = Vector2( 0.37, 0.37 )
texture = ExtResource( 9 )

[node name="game_account" type="LineEdit" parent="Withdraw_panel"]
margin_left = 758.0
margin_top = 627.0
margin_right = 1108.0
margin_bottom = 697.0
theme = SubResource( 19 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0.184314, 0.180392, 0.345098, 1 )
custom_colors/font_color = Color( 1, 1, 1, 0.207843 )
custom_fonts/font = SubResource( 20 )
custom_styles/normal = SubResource( 21 )
placeholder_text = "ေငြထုတ္မည့္ပမာဏကိုထည့္ပါ"
caret_blink = true
caret_blink_speed = 0.5

[node name="question" type="TextureRect" parent="Withdraw_panel"]
margin_left = 1881.0
margin_top = -3.0
margin_right = 1971.0
margin_bottom = 77.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Withdraw_panel/question"]
position = Vector2( 50.5313, 47.3125 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[connection signal="pressed" from="Withdraw_panel/withdraw2" to="." method="_on_withdraw2_pressed"]
[connection signal="pressed" from="Withdraw_panel/Exit" to="." method="_on_Exit_pressed"]
